--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest
-  - flake8 
-  - pylint 
+  - flake8 .
+  - pylint sqlcontacts main
   - mypy --ignore-missing-imports .
