hw17_py_sqlcontacts

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
 script:
   - pytest
   - flake8 
-  - pylint 
+  - pylint db_func, sqlcontacts, interface, main
   - mypy --ignore-missing-imports .
