--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - #pytest
   - flake8 
-  - pylint db_func, sqlcontacts, interface, main
+  - pylint *.py
   - mypy --ignore-missing-imports .
